[gd_scene load_steps=12 format=4 uid="uid://fnadu0s1huqo"]

[ext_resource type="Script" uid="uid://ctt0gi04rppul" path="res://title_scene/title_scene.gd" id="1_i4gmv"]
[ext_resource type="PackedScene" uid="uid://b4qoav36rna8p" path="res://Tile Maps/dungeon-01_.tscn" id="1_uvhto"]
[ext_resource type="PackedScene" uid="uid://nu1ro7iqvu7s" path="res://Interactables/Dungeon/pushable_statue.tscn" id="2_5xqkb"]
[ext_resource type="AudioStream" uid="uid://icx6asre1fmq" path="res://title_scene/audio/waves.mp3" id="2_wgj1g"]
[ext_resource type="AudioStream" uid="uid://b1l1luvqdj2vq" path="res://title_scene/audio/menu_focus.wav" id="3_lj5tl"]
[ext_resource type="AudioStream" uid="uid://m7auftsxvkjy" path="res://title_scene/audio/menu_select.wav" id="4_fkwea"]
[ext_resource type="PackedScene" uid="uid://d0tvh3gfbxesm" path="res://Levels/player_spawn.tscn" id="5_0q24l"]
[ext_resource type="Texture2D" uid="uid://bcqlmo3v12f0u" path="res://title_scene/sprites/pixil-frame-0 (1).png" id="7_wgj1g"]

[sub_resource type="Animation" id="Animation_lj5tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wgj1g"]
resource_name = "default"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fkwea"]
_data = {
&"RESET": SubResource("Animation_lj5tl"),
&"default": SubResource("Animation_wgj1g")
}

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_i4gmv")
music = ExtResource("2_wgj1g")
button_focus_audio = ExtResource("3_lj5tl")
button_press_audio = ExtResource("4_fkwea")

[node name="Dungeon-01" parent="." instance=ExtResource("1_uvhto")]
tile_map_data = PackedByteArray("AAACAAAAAQAKAAAAAAACAAEAAQAKAAEAAAACAAIAAQAKAAIAAAADAAAAAQALAAAAAAADAAEAAQALAAEAAAADAAIAAQALAAIAAAAEAAAAAQAEAAUAAAAEAAEAAQAEAAYAAAAEAAIAAQAEAAcAAAAKAAAAAQAEAAUAABAKAAEAAQAEAAYAABAKAAIAAQAEAAcAABALAAAAAQANAAAAAAALAAEAAQANAAEAAAALAAIAAQANAAIAAAAMAAAAAQAOAAAAAAAMAAEAAQAOAAEAAAAMAAIAAQAOAAIAAAAFAAAAAQAEAAUAABAFAAEAAQAEAAYAABAFAAIAAQAEAAcAABAGAAAAAQAMAAAAAAAGAAEAAQAMAAEAAAAGAAIAAQAMAAIAAAAIAAAAAQAMAAAAAAAIAAEAAQAMAAEAAAAIAAIAAQAMAAIAAAAJAAAAAQAEAAUAAAAJAAEAAQAEAAYAAAAJAAIAAQAEAAcAAAAHAAAAAQAMAAAAAAAHAAEAAQAMAAEAAAAHAAIAAQAMAAIAAAACAAMAAQAHAAIAAAACAAQAAQAHAAMAAAACAAUAAQAHAAQAAAADAAMAAQAIAAIAAAADAAQAAQAIAAMAAAADAAUAAQAIAAQAAAAEAAMAAQAAAAMAAAAEAAQAAQAAAAMAAAAEAAUAAQAAAAMAAAABAAMAAQADAAQAAAABAAQAAQAGAAMAAAABAAUAAQAGAAQAAAAAAAMAAQAEAAUAABAAAAQAAQAEAAYAABAAAAUAAQAEAAcAABD//wMAAQAEAAUAAAD//wQAAQAEAAYAAAD//wUAAQAEAAcAAAD+/wMAAQAMAAAAAAD+/wQAAQAMAAEAAAD+/wUAAQAMAAIAAAAKAAMAAQADAAAAAAAKAAQAAQADAAAAAAAKAAUAAQADAAAAAAALAAMAAQAEAAIAAAALAAQAAQAEAAMAAAALAAUAAQAEAAQAAAAMAAMAAQAFAAIAAAAMAAQAAQAFAAMAAAAMAAUAAQAFAAQAAAANAAMAAQACAAQAAAANAAQAAQAGAAMAAAANAAUAAQAGAAQAAAAOAAMAAQAEAAUAAAAOAAQAAQAEAAYAAAAOAAUAAQAEAAcAAAAPAAMAAQAEAAUAABAPAAQAAQAEAAYAABAPAAUAAQAEAAcAABAQAAMAAQAMAAAAAAAQAAQAAQAMAAEAAAAQAAUAAQAMAAIAAAD+/wgAAQAAAAcAAAD//wgAAQAAAAcAABAQAAgAAQAAAAcAABAPAAgAAQAAAAcAAAAKAAgAAQAAAAcAAAALAAgAAQAAAAcAABAEAAgAAQAAAAcAABADAAgAAQAAAAcAAAAAAAgAAQAMAAAAADABAAgAAQAMAAAAADACAAgAAQAMAAAAADAFAAgAAQAMAAAAADAGAAgAAQAMAAAAADAHAAgAAQAMAAAAADAIAAgAAQAMAAAAADAJAAgAAQAMAAAAADAMAAgAAQAMAAAAADANAAgAAQAMAAAAADAOAAgAAQAMAAAAADAFAAMAAQAAAAEAAAAFAAQAAQAAAAIAAAAGAAMAAQABAAEAAAAGAAQAAQABAAIAAAAHAAYAAQAAAAEAAAAHAAcAAQAAAAIAAAAIAAYAAQABAAEAAAAIAAcAAQABAAIAAAD+/wYAAQAAAAEAAAD+/wcAAQAAAAIAAAD//wYAAQABAAEAAAD//wcAAQABAAIAAAAPAAYAAQAAAAEAAAAPAAcAAQAAAAIAAAAQAAYAAQABAAEAAAAQAAcAAQABAAIAAAAAAAYAAQADAAAAAAAAAAcAAQADAAAAAAABAAYAAQADAAAAAAABAAcAAQADAAAAAAACAAYAAQACAAIAAAACAAcAAQADAAAAAAADAAYAAQADAAAAAAADAAcAAQADAAAAAAAEAAYAAQADAAAAAAAEAAcAAQADAAAAAAAFAAYAAQADAAAAAAAFAAcAAQACAAIAAAAGAAYAAQADAAAAAAAGAAcAAQADAAAAAAAFAAUAAQADAAAAAAAGAAUAAQADAAAAAAAHAAUAAQADAAAAAAAIAAUAAQADAAAAAAAJAAUAAQADAAAAAAAHAAMAAQADAAAAAAAHAAQAAQADAAAAAAAIAAMAAQADAAAAAAAIAAQAAQADAAAAAAAJAAMAAQADAAAAAAAJAAQAAQADAAAAAAAJAAYAAQADAAAAAAAJAAcAAQADAAAAAAAKAAYAAQADAAAAAAAKAAcAAQADAAAAAAALAAYAAQADAAAAAAALAAcAAQADAAAAAAAMAAYAAQADAAAAAAAMAAcAAQADAAAAAAANAAYAAQACAAIAAAANAAcAAQADAAAAAAAOAAYAAQADAAAAAAAOAAcAAQADAAAAAAD+/wAAAQAIAAYAAAD+/wEAAQAIAAYAAAD+/wIAAQAIAAYAAAD//wAAAQAIAAYAAAD//wEAAQAIAAYAAAD//wIAAQAIAAYAAAAAAAAAAQAIAAYAAAAAAAEAAQAIAAYAAAAAAAIAAQAIAAYAAAABAAAAAQAJAAAAAAABAAEAAQAJAAEAAAABAAIAAQAJAAIAAAANAAAAAQAPAAAAAAANAAEAAQAPAAEAAAANAAIAAQAPAAIAAAAOAAAAAQAIAAYAAAAOAAEAAQAIAAYAAAAOAAIAAQAIAAYAAAAPAAAAAQAIAAYAAAAPAAEAAQAIAAYAAAAPAAIAAQAIAAYAAAAQAAAAAQAIAAYAAAAQAAEAAQAIAAYAAAAQAAIAAQAIAAYAAAD+//7/AQAIAAYAAAD+////AQAIAAYAAAD///7/AQAIAAYAAAD/////AQAIAAYAAAAAAP7/AQAIAAYAAAAAAP//AQAIAAYAAAABAP7/AQAIAAYAAAABAP//AQAIAAYAAAACAP7/AQAIAAYAAAACAP//AQAIAAYAAAADAP7/AQAIAAYAAAADAP//AQAIAAYAAAAEAP7/AQAIAAYAAAAEAP//AQAIAAYAAAAFAP7/AQAIAAYAAAAFAP//AQAIAAYAAAAGAP7/AQAIAAYAAAAGAP//AQAIAAYAAAAHAP7/AQAIAAYAAAAHAP//AQAIAAYAAAAIAP7/AQAIAAYAAAAIAP//AQAIAAYAAAAJAP7/AQAIAAYAAAAJAP//AQAIAAYAAAAKAP7/AQAIAAYAAAAKAP//AQAIAAYAAAALAP7/AQAIAAYAAAALAP//AQAIAAYAAAAMAP7/AQAIAAYAAAAMAP//AQAIAAYAAAANAP7/AQAIAAYAAAANAP//AQAIAAYAAAAOAP7/AQAIAAYAAAAOAP//AQAIAAYAAAAPAP7/AQAIAAYAAAAPAP//AQAIAAYAAAAQAP7/AQAIAAYAAAAQAP//AQAIAAYAAAARAP7/AQAIAAYAAAARAP//AQAIAAYAAAARAAAAAQAIAAYAAAARAAEAAQAIAAYAAAARAAIAAQAIAAYAAAARAAMAAQAIAAYAAAARAAQAAQAIAAYAAAARAAUAAQAIAAYAAAARAAYAAQAIAAYAAAARAAcAAQAIAAYAAAARAAgAAQAIAAYAAAASAP7/AQAIAAYAAAASAP//AQAIAAYAAAASAAAAAQAIAAYAAAASAAEAAQAIAAYAAAASAAIAAQAIAAYAAAASAAMAAQAIAAYAAAASAAQAAQAIAAYAAAASAAUAAQAIAAYAAAASAAYAAQAIAAYAAAASAAcAAQAIAAYAAAASAAgAAQAIAAYAAAD+/wkAAQAIAAYAAAD+/woAAQAIAAYAAAD//wkAAQAIAAYAAAD//woAAQAIAAYAAAAAAAkAAQAIAAYAAAAAAAoAAQAIAAYAAAABAAkAAQAIAAYAAAABAAoAAQAIAAYAAAACAAkAAQAIAAYAAAACAAoAAQAIAAYAAAADAAkAAQAIAAYAAAADAAoAAQAIAAYAAAAEAAkAAQAIAAYAAAAEAAoAAQAIAAYAAAAFAAkAAQAIAAYAAAAFAAoAAQAIAAYAAAAGAAkAAQAIAAYAAAAGAAoAAQAIAAYAAAAHAAkAAQAIAAYAAAAHAAoAAQAIAAYAAAAIAAkAAQAIAAYAAAAIAAoAAQAIAAYAAAAJAAkAAQAIAAYAAAAJAAoAAQAIAAYAAAAKAAkAAQAIAAYAAAAKAAoAAQAIAAYAAAALAAkAAQAIAAYAAAALAAoAAQAIAAYAAAAMAAkAAQAIAAYAAAAMAAoAAQAIAAYAAAANAAkAAQAIAAYAAAANAAoAAQAIAAYAAAAOAAkAAQAIAAYAAAAOAAoAAQAIAAYAAAAPAAkAAQAIAAYAAAAPAAoAAQAIAAYAAAAQAAkAAQAIAAYAAAAQAAoAAQAIAAYAAAARAAkAAQAIAAYAAAARAAoAAQAIAAYAAAASAAkAAQAIAAYAAAASAAoAAQAIAAYAAAD8//7/AQAIAAYAAAD8////AQAIAAYAAAD8/wAAAQAIAAYAAAD8/wEAAQAIAAYAAAD8/wIAAQAIAAYAAAD8/wMAAQAIAAYAAAD8/wQAAQAIAAYAAAD8/wUAAQAIAAYAAAD8/wYAAQAIAAYAAAD8/wcAAQAIAAYAAAD8/wgAAQAIAAYAAAD9//7/AQAIAAYAAAD9////AQAIAAYAAAD9/wAAAQAIAAYAAAD9/wEAAQAIAAYAAAD9/wIAAQAIAAYAAAD9/wMAAQAIAAYAAAD9/wQAAQAIAAYAAAD9/wUAAQAIAAYAAAD9/wYAAQAIAAYAAAD9/wcAAQAIAAYAAAD9/wgAAQAIAAYAAAD8/wkAAQAIAAYAAAD8/woAAQAIAAYAAAD9/wkAAQAIAAYAAAD9/woAAQAIAAYAAAA=")
rendering_quadrant_size = 32

[node name="Props" type="Node2D" parent="."]
position = Vector2(249, 201)

[node name="PushableStatue" parent="Props" instance=ExtResource("2_5xqkb")]
position = Vector2(-157, 0)

[node name="PushableStatue2" parent="Props" instance=ExtResource("2_5xqkb")]
position = Vector2(133, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.516)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(261, 101)
scale = Vector2(2, 2)
texture = ExtResource("7_wgj1g")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_fkwea")
}
autoplay = "default"

[node name="ButtonNew" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 187.0
offset_top = 186.0
offset_right = 322.0
offset_bottom = 212.0
text = "new game"

[node name="ButtonContinue" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 187.0
offset_top = 221.0
offset_right = 322.0
offset_bottom = 247.0
text = "continue"

[node name="PlayerSpawn" parent="." instance=ExtResource("5_0q24l")]
position = Vector2(239, 137)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
